syntax="proto3";
package services;
message ProdRequest{
    int32 prod_id = 1;
}
message ProdResponse{
    int32 prod_stock=1;
}
service ProdService{
    rpc GetProdStock (ProdRequest)  returns (ProdResponse);
}